#3 Fix Travis + JaCoCo + Test coverage SonarCloud

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -24,6 +24,11 @@
   </parent>
   <artifactId>bookkeeper-server</artifactId>
   <name>Apache BookKeeper :: Server</name>
+  
+  <properties>
+  <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../jacoco-tests-report-aggregator/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+</properties>
+  
   <dependencies>
     <dependency>
       <groupId>org.apache.bookkeeper</groupId>
