--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -175,9 +175,31 @@
       <version>${project.parent.version}</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.pitest/pitest-maven -->
+    <dependency>
+      <groupId>org.pitest</groupId>
+      <artifactId>pitest-maven</artifactId>
+      <version>1.4.11</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
+    <plugin>
+        <groupId>org.pitest</groupId>
+        <artifactId>pitest-maven</artifactId>
+        <version>1.4.11</version>
+        <configuration>
+          <targetClasses>
+            <param>org.apache.bookkeeper.bookie.BufferedChannel</param>
+            <param>org.apache.bookkeeper.proto.checksum.DigestManager</param>
+          </targetClasses>
+          <targetTests>
+            <param>org.apache.bookkeeper.bookie.TestBufferedDataRead</param>
+            <param>org.apache.bookkeeper.bookie.TestBufferedDataWrite</param>
+            <param>org.apache.bookkeeper.proto.checksum.TestComputeDigestData</param>
+          </targetTests>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
