--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
     <libthrift9.version>0.12.0</libthrift9.version>
     <lombok.version>1.18.10</lombok.version>
     <lz4.version>1.3.0</lz4.version>
-    <mockito.version>3.0.0</mockito.version>
+    <mockito.version>3.3.3</mockito.version>
     <netty.version>4.1.32.Final</netty.version>
     <netty-boringssl.version>2.0.20.Final</netty-boringssl.version>
     <ostrich.version>9.1.3</ostrich.version>
@@ -664,7 +664,7 @@
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
-        <artifactId>mockito-core</artifactId>
+        <artifactId>mockito-inline</artifactId>
         <version>${mockito.version}</version>
       </dependency>
       <dependency>
@@ -766,11 +766,6 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
